# learnault-contracts

./: Cargo.toml  FINAL_CI_REPORT.md
contracts/: Cargo.toml
contracts/badge-nft/: Cargo.toml
contracts/badge-nft/src/: lib.rs
contracts/badge-nft/test_snapshots/test/: test_get_badges_comprehensive.1.json
contracts/course-registry/: Cargo.toml
contracts/course-registry/src/: lib.rs  test.rs  types.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs  test.rs  types.rs
contracts/governance/test_snapshots/test/: test_cancel_proposal_after_voting_period_panics.1.json  test_cancel_proposal_already_executed_panics.1.json  test_cancel_proposal_by_admin_succeeds.1.json  test_cancel_proposal_by_proposer_succeeds.1.json  test_cancel_proposal_by_random_caller_panics.1.json  test_cancel_proposal_emits_event.1.json  test_cancel_proposal_prevents_voting.1.json  test_cast_vote_prevents_double_voting.1.json  test_cast_vote_uses_badge_count_as_weight.1.json  test_execute_proposal_already_executed.1.json  test_execute_proposal_emits_event.1.json  test_execute_proposal_nonexistent.1.json  test_execute_proposal_rejected.1.json  test_execute_proposal_success.1.json  test_execute_proposal_tied_vote.1.json  test_execute_proposal_voting_still_active.1.json  test_upgrade_contract_by_non_admin_panics.1.json  test_upgrade_contract_not_initialized_panics.1.json
contracts/quest-engine/src/: lib.rs  test.rs  types.rs
contracts/reward-pool/src/: lib.rs  test.rs  types.rs
contracts/stake-vault/: Cargo.toml
contracts/stake-vault/src/: lib.rs  test.rs
(+43 files in other folders)
